Add Google site verification meta tag for SEO

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Check your weather" />
+    <meta
+      name="google-site-verification"
+      content="aWSJm4spFSqKZdfM6pN5GYOYPnf3aGHxJC3B2VWDBCQ"
+    />
     <title>The Weather Check</title>
   </head>
   <body>
